--- a/tor_selden-csharp/tor_selden-csharp/tor_selden-csharp.csproj
+++ b/tor_selden-csharp/tor_selden-csharp/tor_selden-csharp.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Day16.cs" />
     <Compile Include="Day17.cs" />
     <Compile Include="Day18.cs" />
+    <Compile Include="Day18b.cs" />
+    <Compile Include="Day19.cs" />
     <Compile Include="Day2.cs" />
     <Compile Include="Day3.cs" />
     <Compile Include="Day4.cs" />
